--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   </head>
   <body>
     <div id="container">
+      <div id="menuToggle">&#9776;</div>
       <canvas id="innerContainer"></canvas>
-      <div id="toolsContainer">
+      <div id="toolsContainer" class="hidden">
         <div id="cursorDiv" class="tools">
           <select name="cursorSelect" id="cursorSelect">
             <option value="draw">Pen</option>
