--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <option value="line">Line</option>
             <option value="rect">Rectangle</option>
             <option value="circ">Circle</option>
+            <option value="eras">Eraser</option>
           </select>
         </div>
         <div id="colorDiv" class="tools">
